vanilla/banana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-front-deployment
  namespace: banana
spec:
  replicas: 3
  selector:
    matchLabels:
      app: banana-front-app
  template:
    metadata:
      labels:
        app: banana-front-app
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - image: jannemattila/webapp-network-tester:1.0.33
        imagePullPolicy: Always
        name: banana-front
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 150m
            memory: 150Mi
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
