vanilla/banana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-front-svc
  namespace: banana
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: banana-front-app
