vanilla/banana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banana-ingress
  namespace: banana
  annotations:
    kubernetes.io/ingress.class: nginx-banana
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: banana-front-svc
            port:
              number: 80
        path: /
        pathType: Prefix
